# flatland

./: CMakeLists.txt  README.md  build.bat  build.sh  console.pro  console2.pro  flatland.pro  lib.pro  ui-android.pro  ui-lib.pro  ui.pro  ut.pro
console/: CMakeLists.txt  main.cpp  main_console.cpp
console2/: CMakeLists.txt  main.cpp  main_console2.cpp
flatland/: CMakeLists.txt  Flatland.cpp  FlatlandCreator.h  FlatlandCreatorItf.h
lib/: AdvancedFlatland.cpp  AdvancedFlatland.h  AdvancedMapCreator.cpp  AdvancedMapCreator.h  CMakeLists.txt  Common.h  CycleFinder.cpp  CycleFinder.h  Flatland.h  FlatlandCreator.cpp  FlatlandItf.h  MapCreator.h  SimpleFlatland.cpp  SimpleFlatland.h  SimpleMapCreator.cpp  SimpleMapCreator.h  Statistics.h  flatlandvisitoritf.h
ui/: AdjustableTimer.cpp  AdjustableTimer.h  RenderAreaAdvanced.h  RenderAreaBase.cpp  RenderAreaBase.h  RenderAreaFactory.h  RenderAreaSimple.cpp  RenderAreaSimple.h  TimerBasedFlatlandRunner.cpp  TimerBasedFlatlandRunner.h  main_ui.cpp  renderarea.cpp  renderarea.h  renderarea.inl  ui.pro  ui_helpers.cpp  ui_helpers.h  window.cpp  window.h  window.inl
ui-android/: main_ui-android.cpp  window-android.cpp  window-android.h
ui-lib/: AdjustableTimer.h  RenderAreaAdvanced.cpp  RenderAreaAdvanced.h  RenderAreaBase.cpp  RenderAreaBase.h  RenderAreaFactory.h  RenderAreaSimple.cpp  RenderAreaSimple.h
ut/: CMakeLists.txt  Test_Flatland.cpp  Test_SimpleFlatland.cpp  Test_SimpleMapCreator.cpp  main.cpp
ut/mocks/: FlatlandCreatorMock.h
